--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node mainTest.js"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
